@@ -8,9 +8,7 @@ import model.Modelo;
 import repository.ModeloRepository;
 import dto.ModeloDTO;
 import dto.ModeloResponseDTO;
-import io.quarkus.hibernate.orm.panache.PanacheQuery;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class ModeloServiceimpl implements ModeloService {
@@ -33,38 +31,32 @@ public class ModeloServiceimpl implements ModeloService {
 
 @Override
 @Transactional
-public ModeloResponseDTO update(Long id, @Valid ModeloDTO dto) {
+public void update(Long id, @Valid ModeloDTO dto) {
     Modelo modelo = modeloRepository.findById(id);
-    if (modelo == null) {
-        throw new IllegalArgumentException("Modelo não encontrado com o ID: " + id);
-    }
     modelo.setNome(dto.nome());
-    modeloRepository.persist(modelo); 
-    return ModeloResponseDTO.valueOf(modelo);
 }
 
 @Override
 @Transactional
 public void delete(Long id) {
-    Modelo modelo = modeloRepository.findById(id);
-    if (modelo == null) {
-        throw new IllegalArgumentException("Modelo não encontrado com o ID: " + id);
-    }
-    modeloRepository.delete(modelo); 
+    modeloRepository.deleteById(id);
 }
+
+
 
 @Override
 public ModeloResponseDTO findById(Long id) {
-    Modelo modelo = modeloRepository.findById(id);
-    return modelo != null ? ModeloResponseDTO.valueOf(modelo) : null;
+    return ModeloResponseDTO.valueOf(modeloRepository.findById(id));
 }
+
 
 @Override
 public List<ModeloResponseDTO> findAll() {
-    PanacheQuery<Modelo> modelos = modeloRepository.findAll();
-    return modelos.stream()
-                  .map(ModeloResponseDTO::valueOf)
-                  .collect(Collectors.toList());
+    return modeloRepository
+    .listAll()
+    .stream()
+    .map(e -> ModeloResponseDTO.valueOf(e)).toList();
 }
+
 
 }
